k8s/apps/external/dockge/endpoint-slice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: dockge
  namespace: dockge
  labels:
    kubernetes.io/service-name: dockge
    endpointslice.kubernetes.io/managed-by: cluster-admins
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 5001
endpoints:
  - addresses:
      - 192.168.1.250
    conditions: { }
