k8s/apps/external/dockge/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dockge
  namespace: dockge
spec:
  ports:
    - name: http
      protocol: TCP
      port: 5001
